# CARVE

./: LICENSE  README.md  pyproject.toml
sample/: debloat-config.yaml
sample/libmodbus/src/: modbus-rtu-private.h  modbus-rtu.c  modbus-rtu.h  modbus-tcp-private.h  modbus-tcp.c  modbus-tcp.h  modbus.c
sample/libmodbus/test/: bandwidth-client.c  bandwidth-server-many-up.c  bandwidth-server-one.c  random-test-client.c  random-test-server.c  unit-test-client.c  unit-test-server.c
src/: carve.py  utility.py
src/carve/: __init__.py  __main__.py  carve.py
src/carve/resource_debloater/: CResourceDebloater.py  PythonImplicitDebloater.py  PythonResourceDebloater.py  ResourceDebloater.py
src/resource_debloater/: CResourceDebloater.py  PythonImplicitDebloater.py  PythonResourceDebloater.py  ResourceDebloater.py  __init__.py
test/: test_explicit_python.py  test_explicit_shared.py  test_implicit_c.py  test_implicit_python.py  test_integration_python.py
